[package]
name = "totp_rfc6238"
version = "0.6.1"
authors = ["KaneGreen <737445366KG@Gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaneGreen/totp_rfc6238"
documentation = "https://docs.rs/totp_rfc6238"
keywords = ["authentication", "hmac", "otp", "totp", "2fa"]
categories = ["authentication", "web-programming"]
description = "library for generating Time-based One-time Password (TOTP) codes/tokens defined in RFC 6238"
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = [ "oathuri" ]

[features]
default = [ "rustcrypto" ]
oathuri = [ "data-encoding", "percent-encoding", "url", "zeroize" ]
ring = [ "dep:ring" ]
rustcrypto = [ "dep:hmac", "dep:sha1", "dep:sha2" ]

[dependencies]
ring = { version = "0.17.8", optional = true }
hmac = { version = "0.12.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
data-encoding = { version = "2.6.0", optional = true }
percent-encoding = { version = "2.3.1", optional = true }
url = { version = "2.5.2", optional = true }
zeroize = { version = "1.8.1", optional = true }
