[package]
name = "totp_rfc6238"
version = "0.6.1"
authors = ["KaneGreen <737445366KG@Gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaneGreen/totp_rfc6238"
documentation = "https://docs.rs/totp_rfc6238"
keywords = ["authentication", "hmac", "otp", "totp", "2fa"]
categories = ["authentication", "web-programming"]
description = "library for generating Time-based One-time Password (TOTP) codes/tokens defined in RFC 6238"
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = [ "oathuri" ]

[features]
default = [ "rustcrypto" ]
oathuri = [ "dep:data-encoding", "dep:percent-encoding", "dep:url", "dep:zeroize" ]
ring = [ "dep:ring" ]
rustcrypto = [ "dep:hmac", "dep:sha1", "dep:sha2" ]

[dependencies]
ring = { version = "0.17.14", optional = true }
hmac = { version = "0.13.0", optional = true, features = ["zeroize"] }
sha1 = { version = "0.11.0", optional = true, features = ["zeroize"] }
sha2 = { version = "0.11.0", optional = true, features = ["zeroize"] }
data-encoding = { version = "2.10.0", optional = true }
percent-encoding = { version = "2.3.2", optional = true }
url = { version = "2.5.8", optional = true }
zeroize = { version = "1.8.2", optional = true }
